[BUGFIX] Fix align text of products in Product Main page

--- a/thepphuongloan/wp-content/themes/thep/style_long.css
+++ b/thepphuongloan/wp-content/themes/thep/style_long.css
@@ -343,6 +343,7 @@ div.post-inner form{
 }
 div.post-inner ul.products{
 	margin-bottom: 15px;
+    text-align: left;
 }
 div.post-inner ul.products li.product{
 	width: 45%;
